added deployment stage on .yml

--- a/.github/workflows/newman.yml
+++ b/.github/workflows/newman.yml
@@ -24,3 +24,19 @@ jobs:
 
       - name: Run Newman Collection Script
         run: ./run_newman.sh
+  deploy:
+    runs-on: ubuntu-latest
+    needs: [newman]
+    steps:
+      - name: Get code
+        uses: actions/checkout@v4
+      - name: Setup SSH Agent
+        uses: webfactory/ssh-agent@v0.9.0
+        with:
+          ssh-private-key: ${{ secrets.PRIVATEDSA }}
+      - name: Check SSH folder content
+        run: ls -la ~/.ssh
+      - name: Check NodeJS version
+        run: node -v
+      - name: rsync connection
+        run: rsync -e "ssh -o StrictHostKeyChecking=no" -arvc * ${{secrets.USERDEV}}@${{secrets.SERVERDEV}}:/home/unang/pom-kasiraja-github/
